# mad-skills

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mad_skills/: __init__.py  cli.py  peer_comm.py
src/mad_skills/skills/fs-chat/: SKILL.md
